--- a/code/source/meson.build
+++ b/code/source/meson.build
@@ -1,9 +1,12 @@
 code = files('module.c')
 
-lib = static_library('fscl-c',
+curl = dependency('curl')
+lib = static_library('fscl-netwark-c',
     code,
+    dependencies : curl,
     include_directories: dir)
 
 fscl_c_dep = declare_dependency(
     link_with: lib,
+    dependencies : curl,
     include_directories: dir)
