--- a/code/source/meson.build
+++ b/code/source/meson.build
@@ -1,12 +1,12 @@
 code = files('module.c')
 
-curl = dependency('curl')
+dep_curl = dependency('curl')
 lib = static_library('fscl-netwark-c',
     code,
-    dependencies : curl,
+    dependencies : dep_curl,
     include_directories: dir)
 
 fscl_c_dep = declare_dependency(
     link_with: lib,
-    dependencies : curl,
+    dependencies : dep_curl,
     include_directories: dir)
